[package]
name = "altshift"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
